--- a/whisper-websocket-streamer/web_server_resources/templates/index.html
+++ b/whisper-websocket-streamer/web_server_resources/templates/index.html
@@ -11,29 +11,214 @@
     </style>
 </head>
 <body>
-    <div id="responseContainer"></div>
     <script src="assets/hark.bundle.js"></script>
     <script src="assets/voice_audio_manager.js"></script>
-    
-    
-    <h1>Chat</h1>
+    <script src="assets/language_model_manager.js"></script>
+     <script src="https://unpkg.com/compromise"></script>
     <img src="/assets/waiting.gif" id="waitingimage" style="display: none" />
-    <img src="/assets/microphone-solid.gif" id="initimage" style="display: block; width: 70%" onClick="init()" />
+    
+    <div><div id="initimage" onClick="init()" style="margin-left: 20%; margin-right: 20%; width: 100%" >
+		<h1>Click to Start</h1>
+		<img src="/assets/microphone-solid.gif"  style="display: block;  height: 20em"  />
+	</div>
+	</div>
+    <style>
+		.btn-primary {
+			border: 2px solid blue;
+			background-color: lightblue;
+			color: darkblue;
+		}
+		.btn-success {
+			border: 2px solid green;
+			background-color: lightgreen;
+			color: darkgreen;
+		}
+		.btn-danger {
+			border: 2px solid red;
+			background-color: pink;
+			color: darkred;
+		}
+		.btn-secondary {
+			border: 2px solid grey;
+			background-color: lightgrey;
+			color: darkgrey;
+		}
+		.btn-warning {
+			border: 2px solid orange;
+			background-color: lightorange;
+			color: darkorange;
+		}
+		.btn {
+			border-radius: 20px;
+			font-size:1.8em;
+			height: 70px;
+			width: 70px;
+		}
+		.usermessage {
+			font-size:1.8em;
+		}
+	</style>
+    
     <script>
-		let vam = null
+	    const SPEAKER_ID = 'p299'
+	    const LANGUAGE_ID = ''
 	
+	   
+		let vam = null
+	    let lmm = null
+	    let conversation = []
+	    let timeout_count = 0
+		let is_finished = false
+		
+		function scrollTo(id, offset) {
+			var element = document.getElementById(id);
+			if (element) {
+			  var headerOffset = offset ? offset : 10;
+			  var elementPosition = element.offsetTop;
+			  var offsetPosition = elementPosition - headerOffset;
+			  setTimeout(function() {
+				document.documentElement.scrollTop = offsetPosition;
+				document.body.scrollTop = offsetPosition; // For Safari
+			  }, 300)
+			}
+		}
+		
+		function generateRandomId() {
+			var timestamp = new Date().getTime();
+			var randomNumber = Math.random().toString(36).substr(2);
+			return timestamp + '-' + randomNumber;
+		}
+		
+		function startWaiting() {
+			document.getElementById('muteButton').style.disabled= true
+		}
+		
+		function stopWaiting() {
+			document.getElementById('muteButton').style.disabled= false
+		}
+		
+		
+		let currentContainerId = null
+		let responseTokens = []
+		let clausesSpoken = 0
+		
+		function playSpeech(text) {
+			clausesSpoken += 1
+			q = "https://"+window.location.host+":5002/api/tts?text="+text + "&speaker_id="+SPEAKER_ID+"&style_wav=&language_id="+LANGUAGE_ID
+			vam.playUrl(q)
+		}
+		
 		function init() {
-			vam = VoiceAudioManager({
-				url:"ws://"+window.location.host+"/asrstream",
+			const c_id = generateRandomId()
+			document.getElementById('menu').style.display= "block"
+			lmm = LanguageModelManager({
+				url:"wss://"+window.location.host+"/llm/"+c_id+"/ws?token=fasdfsdf",
 				onMessage: function(event) {
-					let responseContainer = document.getElementById('responseContainer');
-					responseContainer.innerHTML += `<p>${event.data}</p>`;
+					try {
+						let j = JSON.parse(event.data)
+						let responseContainer = document.getElementById('responseContainer');
+						if (j.started) {
+							currentContainerId = generateRandomId()
+							responseContainer.innerHTML += `<p id="${currentContainerId}"><b>ASSISTANT</b>: </p>` 
+							scrollTo(currentContainerId)
+							clausesSpoken = 0
+							responseTokens = []
+						} else if (j.finished) {
+							currentContainerId = null
+							responseTokens = []
+							// flush last clause
+							let clauses = nlp(responseTokens.join("")).clauses().out('array')
+							if (clauses.length > clausesSpoken && clauses[clauses.length - 1]) {
+								playSpeech(clauses[clauses.length - 1])
+							}
+							
+						} else if (j.token) {
+							responseTokens.push(j.token)
+							// ensure container (should be created by appropriately ordered messages from server - started, finished)
+							if (!currentContainerId) {
+								currentContainerId = generateRandomId()
+								responseContainer.innerHTML += `<p id="${currentContainerId}"><b>ASSISTANT</b>: </p>` 
+								scrollTo(currentContainerId)
+							}
+							let id = generateRandomId()
+							let thisResponseContainer = document.getElementById(currentContainerId);
+							if (thisResponseContainer) { 
+								thisResponseContainer.innerHTML = `<span>${responseTokens.join('')}</span>` 
+								
+							}
+							
+							let clauses = nlp(responseTokens.join("")).clauses().out('array')
+							if (clauses.length > clausesSpoken + 1) {
+								playSpeech(clauses[clauses.length - 2])
+								
+							}
+							// TODO, MOVE TO SENTENCE AFTER 20 TOKENS ?? ON GTX 1060 TOKENS ARE GENERATED SLOWLY 
+							// SO IT IS BETTER TO STAY WITH SHORT SPOKEN CHUNKS
+							// if less than 20 tokens, split by commas as well as sentences for chunking to TTS
+							// split by sentences and commas
+							// if (responseToken.length < 20) {
+							// if more than 20 tokens, split by sentences for chunking to TTS
+							//} else {
+							//	
+							//}
+							
+							
+						} else {
+							// TODO empty message  ... or/and in catch
+						}
+					} catch (e) {console.log(e)}
+				},
+				onOpen: function() {
+					//lmm.send('hello there')
+				}
+			})
+			vam = VoiceAudioManager({
+				url:"wss://"+window.location.host+"/asrstream",
+				onMessage: function(event) {
+					try {
+						let j = JSON.parse(event.data)
+						let responseContainer = document.getElementById('responseContainer');
+						if (j.transcription)  {
+							vam.stop()
+							let id = generateRandomId()
+							responseContainer.innerHTML += `<p id="${id}" ><b>USER</b>: ${j.transcription}</p>`
+							scrollTo(id)
+							is_finished = false
+							lmm.send(j.transcription, conversation.join("\n"))
+							conversation.push("user: " + j.transcription)
+						} else if (j.vad_timeout) {
+							console.log("server timeout ",j)
+							if (timeout_count > 3) {
+								vam.stop()
+								timeout_count = 0
+							} else {
+								timeout_count += 1
+							}
+						} else if (j.finished) {
+							is_finished = true
+						}
+					} catch (e) {}
+				},
+				onStop: function() {
+					toggleButtons(false)
+				},
+				onStart: function() {
+					toggleButtons(true)
+				},
+				onStopPlaying: function() {
+					if (is_finished) {
+						vam.start()
+					}
 				}
 			})
 			vam.start()
+			
 			document.getElementById('initimage').style.display= "none"
 			document.getElementById('buttons').style.display= "block"
 		}
+		
+		
+		
 		
 		function toggleButtons(isStarted) {
 			if (isStarted) {
@@ -45,12 +230,49 @@
 			}
 		}
 		
+		function toggleMuteButtons(isMuted) {
+			if (isMuted) {
+				document.getElementById('muteButton').style.display= "none"
+				document.getElementById('unmuteButton').style.display= "block"
+			} else {
+				document.getElementById('muteButton').style.display= "block"
+				document.getElementById('unmuteButton').style.display= "none"
+			}
+		}
+		
+		
+		function submitForm() {
+			if (document.getElementById('usermessage').value) {
+				let id = generateRandomId()
+				vam.stop()
+				startWaiting()
+				document.getElementById('responseContainer').innerHTML += `<p id="${id}" ><b>USER</b>: ${document.getElementById('usermessage').value}</p>`;
+				lmm.send(document.getElementById('usermessage').value, conversation.join("\n"));
+				document.getElementById('usermessage').value = ''
+			}
+		}
+		
     </script>
-    
-    <div id="buttons"  style="display: none" >
-    <button id="startButton" onClick="vam.start(); toggleButtons(true)"  style="display: none" >Start</button>
-    <button id="stopButton" onClick="vam.stop(); toggleButtons(false)" >Stop</button>
-    <div id="responsecontainer"></div>
+    <div id="menu" style="position: fixed; top: 1; left: 1; border: 1px solid lightgrey; width: 100%; height: 7em; display: none; padding: 0.2em" >
+		
+		<div id="buttons"   >
+			<form onsubmit="submitForm(); return false" >
+			<input style="width: 20em; font-size: 2em; float: left" type='text' value="" id="usermessage"  placeholder="Message" />
+			<button id="sendbutton" style="float: left; margin-left: 0.2em" class="btn btn-primary"  type="submit" title="Send" ><img height="40px"  width="40px" src="/assets/send-plane-line.png" /></button>
+			</form>
+			<button style="float: left; margin-left: 2em;" class="btn  btn-danger"  id="stopLMMButton" onClick="lmm.stop(); "  title="Stop" ><img height="40px"  width="40px" src="/assets/hexagon-fill.png" /></button>
+			<button style="float: left; margin-left: 0.2em" class="btn  btn-success"  id="continueLMMButton" onClick="lmm.continue(); " title="Continue" ><img height="40px"  width="40px" src="/assets/arrow-go-forward-line.png" /></button></button>
+			<div id="buttonsright"  style="float: left; margin-left: 3em" >
+				<button  style="float: left; display: none" class="btn btn-danger" id="startButton" onClick="vam.start(); toggleButtons(true)"   ><img height="40px"  width="40px" src="/assets/mic-off-fill.png" /></button>
+				<button  style="float: left;" class="btn btn-success"  id="stopButton" onClick="vam.stop(); toggleButtons(false)" ><img height="40px"  width="40px" src="/assets/mic-fill.png" /></button>
+				<button  style="float: left;margin-left: 0.2em" class="btn  btn-success"  id="muteButton" onClick="vam.mute(); toggleMuteButtons(true) " title="Mute"  ><img height="40px"  width="40px" src="/assets/volume-vibrate-fill.png" /></button>
+				<button  style="float: left; display: none;margin-left: 0.2em" class="btn btn-danger"  id="unmuteButton" onClick="vam.unmute(); toggleMuteButtons(false) "  title="UnMute" ><img height="40px"  width="40px" src="/assets/volume-off-vibrate-fill.png" /></button>
+				
+			</div>
+		</div>
+		
+    </div>
+    <div id="responseContainer" style="margin-top: 9em; font-size: 1.4em" ></div>
     </div>
     
 </body>
