--- a/whisper-websocket-streamer/web_server_resources/templates/index.html
+++ b/whisper-websocket-streamer/web_server_resources/templates/index.html
@@ -269,6 +269,7 @@
 				<button  style="float: left; display: none;margin-left: 0.2em" class="btn btn-danger"  id="unmuteButton" onClick="vam.unmute(); toggleMuteButtons(false) "  title="UnMute" ><img height="40px"  width="40px" src="/assets/volume-off-vibrate-fill.png" /></button>
 				
 			</div>
+			<div style="float:right; background-color: white; height: 6em; width: 6em" ><a target='new' href="https://github.com/syntithenai/voice2llm" ><img  style=" height: 6em; width: 6em" src="/assets/github-fill.svg" /></a></div>
 		</div>
 		
     </div>
