--- a/whisper-websocket-streamer/web_server_resources/templates/index.html
+++ b/whisper-websocket-streamer/web_server_resources/templates/index.html
@@ -4,71 +4,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realtime WebSocket Audio Streaming</title>
     <style>
-        body {
-            background-color: black;
-            color: green;
-        }
+        
     </style>
 </head>
 <body>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="assets/hark.bundle.js"></script>
     <script src="assets/voice_audio_manager.js"></script>
     <script src="assets/language_model_manager.js"></script>
      <script src="https://unpkg.com/compromise"></script>
     <img src="/assets/waiting.gif" id="waitingimage" style="display: none" />
     
-    <div><div id="initimage" onClick="init()" style="margin-left: 20%; margin-right: 20%; width: 100%" >
-		<h1>Click to Start</h1>
-		<img src="/assets/microphone-solid.gif"  style="display: block;  height: 20em"  />
+    <div>
+		<div id="initimage" onClick="init()" style="margin-left: 20%; margin-right: 20%; width: 100%" >
+			<h1>Click to Start</h1>
+			<img src="/assets/microphone-solid.gif"  style="display: block;  height: 20em"  />
+		</div>
 	</div>
-	</div>
-    <style>
-		.btn-primary {
-			border: 2px solid blue;
-			background-color: lightblue;
-			color: darkblue;
-		}
-		.btn-success {
-			border: 2px solid green;
-			background-color: lightgreen;
-			color: darkgreen;
-		}
-		.btn-danger {
-			border: 2px solid red;
-			background-color: pink;
-			color: darkred;
-		}
-		.btn-secondary {
-			border: 2px solid grey;
-			background-color: lightgrey;
-			color: darkgrey;
-		}
-		.btn-warning {
-			border: 2px solid orange;
-			background-color: lightorange;
-			color: darkorange;
-		}
-		.btn {
-			border-radius: 20px;
-			font-size:1.8em;
-			height: 70px;
-			width: 70px;
-		}
-		.usermessage {
-			font-size:1.8em;
-		}
-	</style>
+   
     
     <script>
 	    const SPEAKER_ID = 'p299'
 	    const LANGUAGE_ID = ''
-	
+	    const MAX_VAD_TIMEOUTS = 5
 	   
 		let vam = null
 	    let lmm = null
 	    let conversation = []
 	    let timeout_count = 0
 		let is_finished = false
+		let currentContainerId = null
+		let responseTokens = []
+		let clausesSpoken = 0
 		
 		function scrollTo(id, offset) {
 			var element = document.getElementById(id);
@@ -98,12 +66,14 @@
 		}
 		
 		
-		let currentContainerId = null
-		let responseTokens = []
-		let clausesSpoken = 0
 		
 		function playSpeech(text) {
 			clausesSpoken += 1
+			q = "https://"+window.location.host+":5002/api/tts?text="+text + "&speaker_id="+SPEAKER_ID+"&style_wav=&language_id="+LANGUAGE_ID
+			vam.playUrl(q)
+		}
+		
+		function playToken(text) {
 			q = "https://"+window.location.host+":5002/api/tts?text="+text + "&speaker_id="+SPEAKER_ID+"&style_wav=&language_id="+LANGUAGE_ID
 			vam.playUrl(q)
 		}
@@ -125,12 +95,13 @@
 							responseTokens = []
 						} else if (j.finished) {
 							currentContainerId = null
-							responseTokens = []
 							// flush last clause
 							let clauses = nlp(responseTokens.join("")).clauses().out('array')
+							//console.log("FIN",clauses, responseTokens)
 							if (clauses.length > clausesSpoken && clauses[clauses.length - 1]) {
 								playSpeech(clauses[clauses.length - 1])
 							}
+							responseTokens = []
 							
 						} else if (j.token) {
 							responseTokens.push(j.token)
@@ -143,26 +114,15 @@
 							let id = generateRandomId()
 							let thisResponseContainer = document.getElementById(currentContainerId);
 							if (thisResponseContainer) { 
-								thisResponseContainer.innerHTML = `<span>${responseTokens.join('')}</span>` 
+								thisResponseContainer.innerHTML = `<span>${responseTokens.join('').replace("\n","<br/>")}</span>` 
 								
 							}
 							
 							let clauses = nlp(responseTokens.join("")).clauses().out('array')
 							if (clauses.length > clausesSpoken + 1) {
 								playSpeech(clauses[clauses.length - 2])
-								
 							}
-							// TODO, MOVE TO SENTENCE AFTER 20 TOKENS ?? ON GTX 1060 TOKENS ARE GENERATED SLOWLY 
-							// SO IT IS BETTER TO STAY WITH SHORT SPOKEN CHUNKS
-							// if less than 20 tokens, split by commas as well as sentences for chunking to TTS
-							// split by sentences and commas
-							// if (responseToken.length < 20) {
-							// if more than 20 tokens, split by sentences for chunking to TTS
-							//} else {
-							//	
-							//}
-							
-							
+						//	console.log("TOK",clauses, responseTokens)
 						} else {
 							// TODO empty message  ... or/and in catch
 						}
@@ -188,7 +148,7 @@
 							conversation.push("user: " + j.transcription)
 						} else if (j.vad_timeout) {
 							console.log("server timeout ",j)
-							if (timeout_count > 3) {
+							if (timeout_count > MAX_VAD_TIMEOUTS) {
 								vam.stop()
 								timeout_count = 0
 							} else {
@@ -204,6 +164,11 @@
 				},
 				onStart: function() {
 					toggleButtons(true)
+				}
+				,
+				onStartPlaying: function() {
+					vam.stop()
+				
 				},
 				onStopPlaying: function() {
 					if (is_finished) {
@@ -253,29 +218,35 @@
 		}
 		
     </script>
-    <div id="menu" style="position: fixed; top: 1; left: 1; border: 1px solid lightgrey; width: 100%; height: 7em; display: none; padding: 0.2em" >
-		
-		<div id="buttons"   >
-			<form onsubmit="submitForm(); return false" >
-			<input style="width: 20em; font-size: 2em; float: left" type='text' value="" id="usermessage"  placeholder="Message" />
-			<button id="sendbutton" style="float: left; margin-left: 0.2em" class="btn btn-primary"  type="submit" title="Send" ><img height="40px"  width="40px" src="/assets/send-plane-line.png" /></button>
-			</form>
-			<button style="float: left; margin-left: 2em;" class="btn  btn-danger"  id="stopLMMButton" onClick="lmm.stop(); "  title="Stop" ><img height="40px"  width="40px" src="/assets/hexagon-fill.png" /></button>
-			<button style="float: left; margin-left: 0.2em" class="btn  btn-success"  id="continueLMMButton" onClick="lmm.continue(); " title="Continue" ><img height="40px"  width="40px" src="/assets/arrow-go-forward-line.png" /></button></button>
-			<div id="buttonsright"  style="float: left; margin-left: 3em" >
-				<button  style="float: left; display: none" class="btn btn-danger" id="startButton" onClick="vam.start(); toggleButtons(true)"   ><img height="40px"  width="40px" src="/assets/mic-off-fill.png" /></button>
-				<button  style="float: left;" class="btn btn-success"  id="stopButton" onClick="vam.stop(); toggleButtons(false)" ><img height="40px"  width="40px" src="/assets/mic-fill.png" /></button>
-				<button  style="float: left;margin-left: 0.2em" class="btn  btn-success"  id="muteButton" onClick="vam.mute(); toggleMuteButtons(true) " title="Mute"  ><img height="40px"  width="40px" src="/assets/volume-vibrate-fill.png" /></button>
-				<button  style="float: left; display: none;margin-left: 0.2em" class="btn btn-danger"  id="unmuteButton" onClick="vam.unmute(); toggleMuteButtons(false) "  title="UnMute" ><img height="40px"  width="40px" src="/assets/volume-off-vibrate-fill.png" /></button>
-				
+    <div id="menu" style="position: fixed; top: 1; left: 1; width: 100%;  display: none;" >
+			  
+		<div id="buttons"  style="background-color:lightgrey; width: 100%" >
+			<div class="row"  style="width: 100%">
+				<div class="col-12 col-sm-6" style="padding-bottom: 0.5em" >
+					<form onsubmit="submitForm(); return false" >
+						<input style="width: 35%; font-size: 1.6em; float: left" type='text' value="" id="usermessage"  placeholder="Message" />
+						<button id="sendbutton" style="float: left; margin-left: 0.2em" class="btn btn-primary"  type="submit" title="Send" ><img height="40px"  width="40px" src="/assets/send-plane-line.png" /></button>
+						<button style="float: left; margin-left: 1em"class="btn  btn-danger"  id="stopLMMButton" onClick="lmm.stop(); "  title="Stop" ><img height="40px"  width="40px" src="/assets/hexagon-fill.png" /></button>
+						<button style="float: left; margin-left: 0.2em" class="btn  btn-success"  id="continueLMMButton" onClick="lmm.continue_dialog(); " title="Continue" ><img height="40px"  width="40px" src="/assets/arrow-go-forward-line.png" /></button>
+					</form>
+				</div>
+				<div class="col-12 col-sm-6">
+					
+					<div id="buttonsright"  style="float: right; " >
+						<button  style="float: right; display: none" class="btn btn-danger" id="startButton" onClick="vam.start(); toggleButtons(true)"   ><img height="40px"  width="40px" src="/assets/mic-off-fill.png" /></button>
+						<button  style="float: right;" class="btn btn-success"  id="stopButton" onClick="vam.stop(); toggleButtons(false)" ><img height="40px"  width="40px" src="/assets/mic-fill.png" /></button>
+						<button  style="float: right; margin-right: 0.2em" class="btn  btn-success"  id="muteButton" onClick="vam.mute(); toggleMuteButtons(true) " title="Mute"  ><img height="40px"  width="40px" src="/assets/volume-vibrate-fill.png" /></button>
+						<button  style="float: right; display: none;margin-right: 0.2em" class="btn btn-danger"  id="unmuteButton" onClick="vam.unmute(); toggleMuteButtons(false) "  title="UnMute" ><img height="40px"  width="40px" src="/assets/volume-off-vibrate-fill.png" /></button>
+					</div>
+				</div>
 			</div>
-			<div style="float:right; background-color: white; height: 6em; width: 6em" ><a target='new' href="https://github.com/syntithenai/voice2llm" ><img  style=" height: 6em; width: 6em" src="/assets/github-fill.svg" /></a></div>
+			
 		</div>
 		
     </div>
-    <div id="responseContainer" style="margin-top: 9em; font-size: 1.4em" ></div>
+    <div id="responseContainer" style="margin-top: 9em; font-size: 1.4em; margin-left:0.3em;; margin-right:0.3em;" ></div>
     </div>
-    
+    <div style="position: fixed; bottom: 0em; right:0em; background-color: white; height: 3em; width:3em" ><a target='new' href="https://github.com/syntithenai/voice2llm" ><img  style=" height: 3em; width: 3em" src="/assets/github-fill.svg" /></a></div>
 </body>
 </html>
 
