--- a/whisper-websocket-streamer/web_server_resources/templates/index.html
+++ b/whisper-websocket-streamer/web_server_resources/templates/index.html
@@ -15,14 +15,7 @@
     <script src="assets/language_model_manager.js"></script>
      <script src="https://unpkg.com/compromise"></script>
     <img src="/assets/waiting.gif" id="waitingimage" style="display: none" />
-    
-    <div>
-		<div id="initimage" onClick="init()" style="margin-left: 20%; margin-right: 20%; width: 100%" >
-			<h1>Click to Start</h1>
-			<img src="/assets/microphone-solid.gif"  style="display: block;  height: 20em"  />
-		</div>
-	</div>
-   
+
     
     <script>
 	    const SPEAKER_ID = 'p299'
@@ -37,6 +30,7 @@
 		let currentContainerId = null
 		let responseTokens = []
 		let clausesSpoken = 0
+		let is_stopped = false
 		
 		function scrollTo(id, offset) {
 			var element = document.getElementById(id);
@@ -79,6 +73,7 @@
 		}
 		
 		function init() {
+			console.log("INIT")
 			const c_id = generateRandomId()
 			document.getElementById('menu').style.display= "block"
 			lmm = LanguageModelManager({
@@ -93,16 +88,17 @@
 							scrollTo(currentContainerId)
 							clausesSpoken = 0
 							responseTokens = []
+							is_stopped = false
 						} else if (j.finished) {
 							currentContainerId = null
 							// flush last clause
 							let clauses = nlp(responseTokens.join("")).clauses().out('array')
 							//console.log("FIN",clauses, responseTokens)
-							if (clauses.length > clausesSpoken && clauses[clauses.length - 1]) {
+							if (!is_stopped && clauses.length > clausesSpoken && clauses[clauses.length - 1]) {
 								playSpeech(clauses[clauses.length - 1])
 							}
 							responseTokens = []
-							
+							is_finished = true
 						} else if (j.token) {
 							responseTokens.push(j.token)
 							// ensure container (should be created by appropriately ordered messages from server - started, finished)
@@ -137,6 +133,7 @@
 				onMessage: function(event) {
 					try {
 						let j = JSON.parse(event.data)
+						console.log(j)
 						let responseContainer = document.getElementById('responseContainer');
 						if (j.transcription)  {
 							vam.stop()
@@ -154,9 +151,7 @@
 							} else {
 								timeout_count += 1
 							}
-						} else if (j.finished) {
-							is_finished = true
-						}
+						} 
 					} catch (e) {}
 				},
 				onStop: function() {
@@ -170,16 +165,14 @@
 					vam.stop()
 				
 				},
-				onStopPlaying: function() {
+				onFinishedPlaying: function() {
+					console.log("onfinish", is_finished)
 					if (is_finished) {
 						vam.start()
 					}
 				}
 			})
-			vam.start()
-			
-			document.getElementById('initimage').style.display= "none"
-			document.getElementById('buttons').style.display= "block"
+			console.log('VAM',vam)
 		}
 		
 		
@@ -207,18 +200,27 @@
 		
 		
 		function submitForm() {
-			if (document.getElementById('usermessage').value) {
-				let id = generateRandomId()
-				vam.stop()
-				startWaiting()
-				document.getElementById('responseContainer').innerHTML += `<p id="${id}" ><b>USER</b>: ${document.getElementById('usermessage').value}</p>`;
-				lmm.send(document.getElementById('usermessage').value, conversation.join("\n"));
-				document.getElementById('usermessage').value = ''
+			try {
+				console.log("SUB")
+				if (document.getElementById('usermessage').value) {
+					let id = generateRandomId()
+					vam.stop()
+					startWaiting()
+					document.getElementById('responseContainer').innerHTML += `<p id="${id}" ><b>USER</b>: ${document.getElementById('usermessage').value}</p>`;
+					lmm.send(document.getElementById('usermessage').value, conversation.join("\n"));
+					document.getElementById('usermessage').value = ''
+				}
+			} catch (e) {
+				console.log(e)
 			}
 		}
 		
+		document.addEventListener('DOMContentLoaded', function() {
+		   init()
+		}, false);
+
     </script>
-    <div id="menu" style="position: fixed; top: 1; left: 1; width: 100%;  display: none;" >
+    <div id="menu" style="position: fixed; top: 1; left: 1; width: 100%; " >
 			  
 		<div id="buttons"  style="background-color:lightgrey; width: 100%" >
 			<div class="row"  style="width: 100%">
@@ -226,15 +228,15 @@
 					<form onsubmit="submitForm(); return false" >
 						<input style="width: 35%; font-size: 1.6em; float: left" type='text' value="" id="usermessage"  placeholder="Message" />
 						<button id="sendbutton" style="float: left; margin-left: 0.2em" class="btn btn-primary"  type="submit" title="Send" ><img height="40px"  width="40px" src="/assets/send-plane-line.png" /></button>
-						<button style="float: left; margin-left: 1em"class="btn  btn-danger"  id="stopLMMButton" onClick="lmm.stop(); "  title="Stop" ><img height="40px"  width="40px" src="/assets/hexagon-fill.png" /></button>
+						<button style="float: left; margin-left: 1em" class="btn  btn-danger"  id="stopLMMButton" onClick=" is_stopped=true; vam.stopPlaying();  lmm.stop(); vam.stop(); return false"  title="Stop" ><img height="40px"  width="40px" src="/assets/hexagon-fill.png" /></button>
 						<button style="float: left; margin-left: 0.2em" class="btn  btn-success"  id="continueLMMButton" onClick="lmm.continue_dialog(); " title="Continue" ><img height="40px"  width="40px" src="/assets/arrow-go-forward-line.png" /></button>
 					</form>
 				</div>
 				<div class="col-12 col-sm-6">
 					
 					<div id="buttonsright"  style="float: right; " >
-						<button  style="float: right; display: none" class="btn btn-danger" id="startButton" onClick="vam.start(); toggleButtons(true)"   ><img height="40px"  width="40px" src="/assets/mic-off-fill.png" /></button>
-						<button  style="float: right;" class="btn btn-success"  id="stopButton" onClick="vam.stop(); toggleButtons(false)" ><img height="40px"  width="40px" src="/assets/mic-fill.png" /></button>
+						<button  style="float: right; " class="btn btn-danger" id="startButton" onClick="vam.start(); toggleButtons(true)"   ><img height="40px"  width="40px" src="/assets/mic-off-fill.png" /></button>
+						<button  style="float: right;display: none" class="btn btn-success"  id="stopButton" onClick="vam.stop(); toggleButtons(false)" ><img height="40px"  width="40px" src="/assets/mic-fill.png" /></button>
 						<button  style="float: right; margin-right: 0.2em" class="btn  btn-success"  id="muteButton" onClick="vam.mute(); toggleMuteButtons(true) " title="Mute"  ><img height="40px"  width="40px" src="/assets/volume-vibrate-fill.png" /></button>
 						<button  style="float: right; display: none;margin-right: 0.2em" class="btn btn-danger"  id="unmuteButton" onClick="vam.unmute(); toggleMuteButtons(false) "  title="UnMute" ><img height="40px"  width="40px" src="/assets/volume-off-vibrate-fill.png" /></button>
 					</div>
